polished contact Ui and nav styles

--- a/index.html
+++ b/index.html
@@ -46,13 +46,31 @@
     </section>
     <main>
         <section id="About Me">
-            <p>Hi my name is Ian Rattigan. I'm currently attending a coding bootcamp at university of miami. I wasn't expecting to fall in love with coding but i actually find the subject very interesting.
-            I love to play games and I love to dance! I also own a clothing brand and youtube channel, This carreer switch will help me put more money into these goals.
+            <p>
+                Hi my name is Ian Rattigan. I'm currently attending a coding bootcamp at university of miami. I wasn't expecting to fall in love with coding but i actually find the subject very interesting.
+                I love to play games and I love to dance! I also own a clothing brand and youtube channel, This carreer switch will help me put more money into these goals.
             </p>
         </section>
 
         <section id="Work">
             <a href="https://www.google.com/?client=avast-a-2"><img src="https://static.vecteezy.com/system/resources/previews/003/582/701/original/coming-soon-background-illustration-template-design-free-vector.jpg" alt="Work coming soon"></a>
+        </section>
+
+        <section id="Contact Me">
+            <ul>
+                <li>
+                    954-662-2366
+                </li>
+                <li>
+                    Ian.rattigan2000@gmail.com
+                </li>
+                <li>
+                    Github
+                </li>
+                <li>
+                    Instagram 
+                </li>
+            </ul>
         </section>
     </main>
 
